<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        app:title="@string/mafia"
        app:titleTextColor="@color/white"
        />

    <androidx.recyclerview.widget.RecyclerView
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_role"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:padding="16dp"/>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="6dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/cardView"
        >
        <EditText
            android:id="@+id/notes"
            android:hint="@string/place_for_notes"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:autofillHints="Notes" />

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/finish_button"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/finish_the_game"/>

</LinearLayout>